@@ -121,6 +121,8 @@ STREAM: 2.0
   1GL1I9F: ITPJCORE:WIN2000 - Wrong source mapping for binary methods with parameters with identical simple names
   1G4CIP0: ITPJUI:WIN - Source for binaries doesn't work for anonymous inner classes  
   1GD79XM: ITPJCORE:WINNT - Search - search for field references - not all found
+  1GLA60W: ITPJCORE:WINNT - CodeAssist - should not propose declarations of method already locally implemented
+  1GLAEZB: ITPJCORE:WINNT - CodeAssist does not disambiguate method references
 
   PRs Closed in this Release
   ===============================================================================
